Comment out install package calls, knit HTML

--- a/lesson6/lesson6_student.rmd
+++ b/lesson6/lesson6_student.rmd
@@ -336,8 +336,8 @@ Response:
 Notes:
 
 ```{r A Bigger, Better Data Set}
-install.package('bitops')
-install.packages('RCurl')
+#install.package('bitops')
+#install.packages('RCurl')
 library('bitops')
 library('RCurl')
 
