--- a/EDA_R_FinalProject/WADOH_DataExplore.Rmd
+++ b/EDA_R_FinalProject/WADOH_DataExplore.Rmd
@@ -20,7 +20,7 @@ While I am a trained scientist, I am not an expert statistician or programmer.  
 
 ```{r working directory, .RData I/O}
 setwd("Udacity//dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/")
-#save.image("project_pause.RData")
+save.image("project_pause.RData")
 load("project_pause.RData")
 ```
 
@@ -66,10 +66,9 @@ with(vacc,table(school_type, reported, school_year))
 #percent reported for each school type
 prop.table(with(vacc,table(school_type, reported)),1)[,2:3]*100
 #percent reported for each school type for each year
-prop.table(with(vacc,table(school_type, reported,school_year == "2011")),1)[,2:3,2]*100
-prop.table(with(vacc,table(school_type, reported,school_year == "2012")),1)[,2:3,2]*100
-prop.table(with(vacc,table(school_type, reported,school_year == "2013")),1)[,2:3,2]*100
-
+prop.table(with(vacc,table(school_type, reported,school_year == "2011")),c(1,3))[,2:3,2]*100
+prop.table(with(vacc,table(school_type, reported,school_year == "2012")),c(1,3))[,2:3,2]*100
+prop.table(with(vacc,table(school_type, reported,school_year == "2013")),c(1,3))[,2:3,2]*100
 
 ```
 The 2011 data set has the most not reported.  The 2012 data set has 0 not reported.  This seems unusual given the number of not reported in the bracketing school years.  I wonder if the data provided in 2012 was only from schools that reported.  I do note that the 2012 data set has the most amount of schools as well.  Interesting, I will follow up on this.  2013 has 302 schools not reporting.  The data set actually didn't contain this information, and I surmised it for Na values in other columns (see data wrangling RMD).  Several news sources have reported that ~300 schools are failing to report.  That doesn't assure the accuracy of my calculation, but it is consistent.
@@ -82,7 +81,8 @@ names(vaccReported)
 vaccReported$nonmedical_exempt <- sum(vacc$religious_exempt,vacc$personal_exempt)
 
 gg <- vaccReported[is.na(vaccReported$religious_exempt),]
-is.na(vaccReported$personal_exempt)
+gg2  <- vaccReported[is.na(vaccReported$personal_exempt,)]
+gg3 <-  vaccReported[is.na(vaccReported$medical_exempt,)]
 #there are Na's where the value should be 0 or null (example, 1 exemption, that exemption is personal, therefore medical and religious are Na, ask coaches how to handle this)
 ```
 
@@ -106,8 +106,11 @@ ggplot(aes(x = total_exemptions), data = vaccReported) +
 ggplot(aes(x = total_exemptions), data = vaccReported) + 
   geom_histogram(binwidth = .1,  color = 'black',fill = '#F79420') +
   facet_wrap(~school_year) +
-  scale_x_log10() +
-  xlab("Log10(total_exemptions)")
+  scale_x_log10() 
+
+ggplot(aes(x = total_exemptions), data = subset(vaccReported, total_exemptions >0)) + 
+  geom_histogram(binwidth = .1,  color = 'black',fill = 'red') +
+  scale_x_log10() 
 
 #explore medical exemptions
 summary(vaccReported$medical_exempt)
