--- a/EDA_R_FinalProject/WADOH_DataExplore.Rmd
+++ b/EDA_R_FinalProject/WADOH_DataExplore.Rmd
@@ -22,6 +22,7 @@ While I am a trained scientist, I am not an expert statistician or programmer.  
 setwd("Udacity//dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/")
 save.image("project_pause.RData")
 load("project_pause.RData")
+
 ```
 
 ```{r data load}
@@ -78,12 +79,10 @@ The 2011 data set has the most not reported.  The 2012 data set has 0 not report
 vaccReported <- subset(vacc, vacc$reported == "Yes")
 names(vaccReported)
 #create column for nonmedical_exempt
-vaccReported$nonmedical_exempt <- sum(vacc$religious_exempt,vacc$personal_exempt)
+vaccReported$nonmedical_exempt <- vaccReported$religious_exempt + vaccReported$personal_exempt
 
-gg <- vaccReported[is.na(vaccReported$religious_exempt),]
-gg2  <- vaccReported[is.na(vaccReported$personal_exempt,)]
-gg3 <-  vaccReported[is.na(vaccReported$medical_exempt,)]
-#there are Na's where the value should be 0 or null (example, 1 exemption, that exemption is personal, therefore medical and religious are Na, ask coaches how to handle this)
+
+
 ```
 
 
@@ -126,11 +125,12 @@ ggplot(aes(x = medical_exempt), data = vaccReported) +
 summary(vaccReported$nonmedical_exempt)
 by(vaccReported$nonmedical_exempt, vaccReported$school_year,summary)
 #non-medical exempt
-ggplot(aes(x = non), data = vaccReported) + 
+ggplot(aes(x = nonmedical_exempt), data = vaccReported) + 
   geom_histogram(binwidth = .1,  color = 'black',fill = '#F79420') +
   facet_wrap(~school_year) +
   scale_x_log10() +
   xlab("Log10(nonMedical_exemptions)")
+
 
 ```
 
