--- a/EDA_R_FinalProject/WADOH_DataExplore.Rmd
+++ b/EDA_R_FinalProject/WADOH_DataExplore.Rmd
@@ -74,7 +74,7 @@ prop.table(with(vacc,table(school_type, reported,school_year == "2013")),c(1,3))
 ```
 The 2011 data set has the most not reported.  The 2012 data set has 0 not reported.  This seems unusual given the number of not reported in the bracketing school years.  I wonder if the data provided in 2012 was only from schools that reported.  I do note that the 2012 data set has the most amount of schools as well.  Interesting, I will follow up on this.  2013 has 302 schools not reporting.  The data set actually didn't contain this information, and I surmised it for Na values in other columns (see data wrangling RMD).  Several news sources have reported that ~300 schools are failing to report.  That doesn't assure the accuracy of my calculation, but it is consistent.
 
-```{r alter vacc}
+```{r vacc object derivatives}
 #subset on reported == "Yes"
 vaccReported <- subset(vacc, vacc$reported == "Yes")
 names(vaccReported)
@@ -88,29 +88,40 @@ vaccReported$school_type[vaccReported$school_type != "Public"] <- "not_Public"
 unique(vaccReported$school_type)
 vaccReported$school_type <- as.factor(vaccReported$school_type)
 
+#remove schools where exemption counts don't reconcile with eachother or enrollment
+#I noticed this was the case during some of my intitial plotting of the data
+#everything checks out except for nonmedical exempt vs total enrolled and nonmedical exempt + medical exempt vs. total exempt.  It is the same 2 observations in each case
+
+vaccReported <- vaccReported[vaccReported$nonmedical_exempt  <= vaccReported$enrolled,]
+
+#create subset of schools with populations of at least 100
+vaccReported_NLT100 <- subset(vaccReported,vaccReported$enrolled >= 100)
+
+
+
+
+
+
 
 ```
 ```{r sandbox}
-#trying to normalize hist plots to number of observations per level (ie county, city etc)
 
+##freqpoly proportion of percent exempt, by county, color = year
 ggplot(aes(x = percent_exempt, y = ..count../sum(..count..)), data = vaccReported) +
   geom_freqpoly(binwidth = .5, aes(color = school_year)) +
   facet_wrap(~school_county) +
   scale_x_log10()
 
+##freqpoly density of percent exempt, by county, color = year
 ggplot(aes(x = percent_exempt, y = ..density..), data = vaccReported) +
   geom_freqpoly(binwidth = .5, aes(color = school_year)) +
   facet_wrap(~school_county) +
   scale_x_log10()
 
-#inspect
+##inspect
 top200_allyears_allpop <- arrange(vaccReported, desc(percent_exempt))[1:200,c("school_year","school_name", "school_county", "school_city","enrolled", "total_exemptions", "percent_exempt")]
 
 top200_allyears_NLT100 <- arrange(subset(vaccReported, vaccReported$enrolled >= 100), desc(percent_exempt))[1:200,c("school_year","school_name", "school_county", "school_city","enrolled", "total_exemptions", "percent_exempt")]
-
-#create subset of schools with populations of at least 100
-vaccReported_NLT100 <- subset(vaccReported,vaccReported$enrolled >= 100)
-
 
 
 
@@ -147,7 +158,9 @@ ggplot(vaccReported_NLT100, aes(x = school_year, y = percent_nonmedexempt)) +
   facet_wrap(~school_county)
 
 
+gg2 <- arrange(vaccReported_NLT100,desc(percent_nonmedexempt))
 
+#should probably add a filter to get rid of situations where total exemptions > enrolled or nonmedical exempitons > total exemptions
 
 
 #what proportion of total exemptions are personal exemptions
